styles/styles.css
#caption{
    position: fixed;
    bottom: 10px;
    width: 100%;
    text-align: center;
    color: white;
    background: rgba(0,0,0, 0.75);
    padding: 10px;
}

@media (max-width: 768px) {
    #caption {
        font-size: 15px;
        left: 5px;
    }
}


.popup-box{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.7);
    justify-content: center;
    align-items: center;
    z-index: 9999;
}

.popup-content{
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5) ;
}

.popup-form {
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    background-color: white;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    z-index: 1000;
}

/* Style for the input field */
input[type="text"] {
    width: 200px;
    padding: 5px;
    border: 1px solid #ccc;
    border-radius: 3px;
}

/* Style for the submit button */
input[type="submit"] {
    padding: 5px 10px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 3px;
    cursor: pointer;
}

